# Stud-Mini-Git

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements_additions.txt  setup.py
.stud/: index  remotes.json
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  deps.py  graphql_schema.py  kafka_client.py  logging_config.py  main.py  models.py  redis_client.py  repo_storage.py  schemas.py  security.py  telemetry.py
k8s/: deployment.yaml  infra.yaml  ingress.yaml
my-project/: stud.json
my-project/.stud/: remotes.json
myrepo-clone/.stud/: index
myrepo/.stud/: index  remotes.json
stud/: __init__.py
stud.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stud/ai/: __init__.py  client.py  code_review.py  commit_messages.py  dependency_advisor.py  release_notes.py  workflow_generator.py
stud/cli/: __init__.py  completion.py  main.py  repl.py  ui.py  wizards.py
stud/cloud/: __init__.py  deploy.py  service.py
stud/core/: __init__.py  config.py  events.py  exceptions.py  hashing.py  ignore.py  lockmanager.py  object_store.py
stud/plugins/: __init__.py  loader.py  manifest.py  marketplace_client.py  registry.py  sdk.py
stud/security/: __init__.py  audit.py  secret_scanner.py  signatures.py  vuln_scanner.py
stud/vcs/: __init__.py  cherry_pick.py  diff.py  index.py  merge.py  objects.py  rebase.py  refs.py  remote.py  service.py
stud/workflows/: __init__.py  runner.py  scheduler.py  schema.py  secrets.py  service.py  triggers.py
(+42 files in other folders)
